// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When a coverage report is running at 10% progress 1`] = `
<button
  className="btn btn-danger"
  onClick={[Function]}
  style={
    Object {
      "marginBottom": "10px",
      "width": "100%",
    }
  }
>
  Cancel
</button>
`;

exports[`When the user does not have a coverage report 1`] = `
<button
  className="btn btn-block btn-primary"
  onClick={[Function]}
  style={
    Object {
      "marginBottom": "10px",
    }
  }
>
  <i
    className="fa fa-bolt"
  />
   Run
</button>
`;

exports[`When the user has a coverage report 1`] = `
<button
  className="btn btn-block modify-coverage-button"
  onClick={[Function]}
  style={
    Object {
      "marginBottom": "10px",
    }
  }
>
  <i
    className="fa fa-edit"
  />
   Modify
</button>
`;
